[gd_scene load_steps=3 format=3 uid="uid://dua434ibuxywe"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_4ojtk"]
[ext_resource type="Texture2D" uid="uid://emp8iisd0r4" path="res://scenes/background.jpg" id="2_wxcf2"]

[node name="MainMenu" type="Control"]
modulate = Color(1, 0.417312, 0.492562, 1)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ojtk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 3
layout_mode = 0
offset_top = -1.0
offset_right = 264.0
offset_bottom = 100.0

[node name="PlayButton" type="Button" parent="VBoxContainer"]
z_index = 4
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
z_index = 4
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
z_index = 4
layout_mode = 2
text = "Credits"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_wxcf2")

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
